tests/ok/module-relative-paths.ari
mod Outer {
  pub enum Choice {
    A(i32),
    B,
  }

  pub fn base() -> i64 {
    return 3;
  }

  pub mod Inner {
    use super::base as parent_base
    use self::Deep::value as deep_value

    mod Deep {
      pub fn value() -> i64 {
        return 4;
      }
    }

    pub fn total(value: super::Choice) -> i64 {
      return parent_base() + self::Deep::value() + deep_value() + match value {
        super::A(inner) => inner as i64,
        super::B => 1;
      };
    }
  }
}

fn main() -> i64 {
  return Outer::Inner::total(Outer::A(5));
}
